<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".taskCreation.TaskCreation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/holo_blue_light"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            tools:context=".taskCreation.TaskCreation">
            <TextView
                android:id="@+id/to_do_task_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="casual"
                android:text="toDoTasks"
                android:textSize="40sp" />
            <ImageView
                android:id="@+id/img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_toRightOf="@id/to_do_task_label"
                android:layout_alignBottom="@id/to_do_task_label"
                android:src="@drawable/emoji" />

            <ProgressBar
                android:visibility="gone"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progress_bar"/>
            <TextView
                android:text="Task_name:"
                android:layout_marginTop="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/task_name_label"/>
            <TextView
                android:layout_below="@id/progress_bar"
                android:visibility="gone"
                android:id="@+id/creating_alarm_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creating_alarm"/>

            <EditText
                android:hint="task_name"
                android:layout_below="@id/task_name_label"
                android:id="@+id/task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
            <TextView
                android:text="Task_time:"
                android:layout_below="@id/task_name"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/task_time_label"/>
            <TextView
                android:id="@+id/task_time"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/task_time_label"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:hint="set_time" />
            <TextView
                android:layout_toRightOf="@id/task_time"
                android:layout_alignBottom="@id/task_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="24hr"/>

            <ImageView
                android:id="@+id/task_image_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/task_time"
                android:layout_alignBottom="@id/task_time"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/task_time"
                android:src="@drawable/ic_access_alarms_black_24dp" />
            <TextView
                android:text="Task likablity:"
                android:layout_marginTop="75dp"
                android:layout_below="@id/task_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/task_likablity_label"/>
            <TextView
                android:id="@+id/hate_likablity_label"
                android:text="@string/hate_likablity"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/task_likablity_label"
                />
            <TextView
                android:layout_alignBottom="@id/hate_likablity_label"
                android:text="@string/avg_likablity"
                android:layout_marginLeft="50dp"
                android:id="@+id/avg_likablity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/hate_likablity_label"/>
            <TextView
                android:text="@string/high_likablity"
                android:layout_marginLeft="80dp"
                android:layout_alignBottom="@id/hate_likablity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/high_likablity"
                android:layout_toRightOf="@+id/avg_likablity"/>
            <androidx.appcompat.widget.AppCompatSeekBar
                android:layout_marginTop="5dp"
                android:max="2"
                android:theme="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_below="@id/hate_likablity_label"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:id="@+id/task_likablity"/>

            <TextView
                android:id="@+id/task_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/task_likablity"
                android:layout_marginTop="75dp"
                android:text="@string/task_notify_msg" />

            <Button
                android:textColor="@android:color/white"
                android:background="@android:color/holo_blue_light"
                android:id="@+id/task_schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/task_msg"
                android:layout_marginTop="20dp"
                android:text="schedule task" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>